# alia-all

./: .gitignore  README.md  Untitled.ipynb  docker-compose.yaml  install-docker.sh  setup-base_station.sh  setup-node.sh  setup-rasp.sh  setup-router.sh
aliaui/: .env  Dockerfile  Makefile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test.d.ts  tsconfig.json
aliaui/app/: body.tsx  declaration.d.ts  doser.tsx  globals.css  layout.tsx  mixer.tsx  mqtt_c.js  navbar.tsx  page.tsx  providers.tsx  reservoirFillter.tsx  routing.tsx  waterTank.tsx
aliaui/app/api/config/: route.ts
aliaui/app/config/: AddRouteConfig.js  AddRouterConfig.js  AddRouterConfig.tsx  AddZoneConfig.tsx  Chart.tsx  GeneralConfig.tsx  GeneralConfigLine.tsx  Overview.tsx  PumpRouterConfig.js  RouterConfig copy.js  RouterConfig.tsx  RoutesConfig.tsx  ZoneLine.js  Zones.tsx  basestation.tsx  basestationconfigLine.tsx  page.tsx  routeDiv.tsx  routersDiv.tsx
aliaui/app/config/[[...slug]]/: AddRouteConfig.tsx  AddRouterConfig.tsx  AddZoneConfig.tsx  BaseStationConfig.tsx  Chart.tsx  ConfigEditor.tsx  ConfigOverview copy.js  GeneralConfig.tsx  GeneralConfigLine.tsx  Init.tsx  Overview.tsx  RouteLine.js  RouterConfig.tsx  RoutersDiv.tsx  RoutesConfig.tsx  WirelessHubConfig.tsx  Zones.tsx  ZonesConfig.tsx  page.tsx  port.js  routeDiv.tsx
aliaui/app/init/: page.tsx
aliaui/app/logs/: Logs.tsx  page.tsx
aliaui/app/logs/[[...slug]]/: page.tsx
aliaui/app/manual_components_commands/: RouterCommands.tsx  baseStationCommands.tsx  body.tsx  command.ts  doser.tsx  page.tsx  reservoirFillter.tsx  routing.tsx  waterTank.tsx
aliaui/app/manual_hub_commands/: body.tsx  command.ts  doser.tsx  mixer.tsx  page.tsx  reservoirFillter.tsx  routing.tsx  waterTank.tsx
aliaui/app/manual_system_commands/: page.tsx
aliaui/app/overview/: Chart.tsx  Overview.tsx  page.tsx
aliaui/app/scheduler/: Body.tsx  EventsTimeline.tsx  JobInfo.tsx  LeftBar.tsx  NewJob.tsx  cardModal.tsx  cardZone.tsx  dailyActionTable.tsx  page.tsx
aliaui/app/scheduler/[[...slug]]/: EventsTimeline.tsx  JobInfo.tsx  LeftBar.tsx  NewJob.tsx  dailyActionTable.tsx  page.tsx
aliaui/app/scheduler/new/: NewPage.tsx  page.tsx
aliaui/app/system_health/: page.tsx
aliaui/lib/: checkStatus.tsx  configActions.tsx  init.sql  init.tsx  mqttClient.tsx  routerActions.tsx  schedulerActions.tsx  zonesActions.tsx
aliaui/prisma/: schema.prisma
aliaui/public/: config.json  init.sql
backend/: Dockerfile  Makefile  db.py  driver.py  hub.py  pyproject.toml
backend/template_classes/: humidity_temperature.py  knob.py  relay.py
base_station/: Dockerfile  Makefile  command_manager.py  data_model.py  db.py  main.py  pyproject.toml
base_station/controllers/: base_station.py  pump_dosing.py  pump_mixing.py  pump_water_source.py
base_station/prisma/: schema.prisma
base_station/template_classes/: knob.py  relay.py  water_level.py  water_sensor.py
db/: Makefile  init.sql
heartbeater/: Makefile  config.py  hub_command.py  logger.py  main.py  routing.py  water.py
hub/: Dockerfile  Makefile  base_command.py  commands_handler.py  config.py  db.py  hub_command.py  main.py  node_command.py  pyproject.toml  routing.py  test_async.py
mqtt/: Dockerfile  Makefile  mosquitto.conf
router/: Dockerfile  Makefile  command_handler.py  db.py  get_serial_number.py  logger.py  main.py  mqtt_config.py  pyproject.toml  sbc_manager.py
router/controllers/: routing_station.py
router/prisma/: schema.prisma
router/template_classes/: relay.py
scheduler/: Dockerfile  Makefile  db.py  event_processor.py  hub_commands.py  logger.py  main.py  pyproject.toml  scheduler.py
scheduler/prisma/: schema.prisma
