[tool.poetry]
name = "router"
version = "0.1.0"
description = ""
authors = ["Zakaria Ouzarf <zakaria.ouzarf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
phidget22 = "^1.19.20240513"
paho-mqtt = "^2.1.0"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
getmac = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
