[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Zakaria Ouzarf <zakaria.ouzarf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^2.1.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
